--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>My Repository</h1>
-    <p>This is my first repository for intermediate web communications</p>
-    
+    <p>This is my first repository for intermediate web communications </p>
+    <p>This is a tester for the second day of class!</p>
 </body>
 </html>
