v1 of CSS review
IDs, Classes, and Divs

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Version Control Review</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <h1>My Repository</h1>
-    <p>This is my first repository for intermediate web communications </p>
+    <p id="first">This is my first repository for intermediate web communications </p>
     <p>This is a tester for the second day of class!</p>
+
+    <h2>What I need to do this Week!</h2>
+    <ol>
+        <li class="personal">Clean kitchen</li>
+        <li class="personal">Take out garbage</li>
+        <li>Quote to client</li>
+        <li class="personal">Laundry</li>
+    </ol>
 </body>
 </html>
