style: update colours

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <h1>My Repository</h1>
+    <div class="header">
+        <h1>My GitHub Repository</h1>
+        <p>This is the header</p>
+    </div>
     <p id="first">This is my first repository for intermediate web communications </p>
-    <p>This is a tester for the second day of class!</p>
+    <p>This is a tester for the second day of class! :p</p>
 
     <h2>What I need to do this Week!</h2>
     <ol>
@@ -18,5 +21,6 @@
         <li>Quote to client</li>
         <li class="personal">Laundry</li>
     </ol>
+    
 </body>
 </html>
